--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,2 +1,32 @@
-FROM mysql:8.0
-ENV LANG ja_JP.UTF-8
+# ビルドステージ
+FROM golang:1.22.2 as build
+
+# 作業ディレクトリを設定
+WORKDIR /backend/api  # 作業ディレクトリはプロジェクトのルートに合わせて
+
+# 依存関係ファイルを追加
+COPY go.mod ./
+COPY go.sum ./
+
+# 依存関係をダウンロード
+RUN go mod download
+
+# アプリケーションソースコードを追加
+COPY . ./
+
+# アプリケーションをビルド
+RUN go build -o /main ./main.go
+
+# 実行ステージ
+FROM debian:stable-slim as app
+
+WORKDIR /app 
+
+# ビルド成果物をコピー
+COPY --from=build /main /app/
+
+# 必要なポートを公開
+EXPOSE 8080
+
+# アプリケーションを実行
+CMD ["/app/main"]
